duicontrolpanel (0.12.14~unreleased) unstable; urgency=low

  * some layout fixes
  * Fixes: NB#247999 - Looks as if multiple taps on a applet opens the
    applet multiple times

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 22 Apr 2011 10:48:38 +0200

duicontrolpanel (0.12.13) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: NB#247927 - clicking settings from events object view opens
    view with no toolbar
  * Fixes: NB#244666 - [TASK] Control panel shall implement splash
    screen

  [ Sandor Pinter ]
  * Fixes: NB#247954 - The device shows previously opened screen when
    Settings application is opened

 -- Sandor Pinter <sandor.pinter@blumsoft.eu>  Wed, 20 Apr 2011 11:16:02 +0200

duicontrolpanel (0.12.12) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#246239 - Settings application re-opens slowly, if swiped
    to background few times in a row
  * Fixes: NB#243609 - ResetApplet: Missing info icon in header

  [ Robert Manner ]
  * Fixes: NB#241369 - Some brightness indicator is not visible
  * Fixes: NB#246257 - COREWEB: duicontrolpanel-briefsupplier '_dl_fixup
    _dl_runtime_resolve

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 15 Apr 2011 15:00:45 +0200

duicontrolpanel (0.12.11) unstable; urgency=low

  [ Viktor Nagy ]
  * Speed improvements for shorter startup time

  [ Robert Manner ]
  * Fixes: NB#244769 - Stop using .launch suffix

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 13 Apr 2011 11:46:42 +0200

duicontrolpanel (0.12.10) unstable; urgency=low

  * Fixes: NB#235703 - COREWEB
  * Fixes: NB#243609 - ResetApplet: Missing info icon in header
  * New: HelpId can be specified for a category, see doc for details
  * Fixes: NB#242796 - com.nokia.DuiControlPanelIf.appletPage does not
    work for declarative applets
  * Fixes: NB#244960 - Events heading is different when opened from
    settings and from events view

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 08 Apr 2011 12:47:17 +0200
