@@ -3,8 +3,9 @@ duicontrolpanel (0.12.14~unreleased) unstable; urgency=low
   * some layout fixes
   * Fixes: NB#247999 - Looks as if multiple taps on a applet opens the
     applet multiple times
+  * Fixes: "Special" briefview can not request page close (for reset applet)
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 22 Apr 2011 10:48:38 +0200
+ -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 26 Apr 2011 15:05:55 +0200
 
 duicontrolpanel (0.12.13) unstable; urgency=low
 
